# CONTROLCAMBIO

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  carreras_desde_pdf.py  pyproject.toml
controlcomparador/: __init__.py  __main__.py  agent.py  app.py  config.py  detector.py  models.py
controlcomparador/comparators/: laplata.py  palermo.py  posting.py  san_isidro.py
controlcomparador/parsers/: pdf.py  planilla.py  posting.py  report.py
controlcomparador/ui/: console.py  menus.py  tables.py
controlcomparador/utils/: money.py
tests/: conftest.py  test_config.py  test_detector.py  test_laplata.py  test_money.py  test_palermo.py  test_posting.py  test_report.py  test_san_isidro.py  test_tela_oficial.py
tests/fixtures/: archivo_generico.txt  posting_only.txt  reporte_con_posting.txt  reporte_ejemplo.txt  reporte_laplata.txt  reporte_only.txt  reporte_palermo.txt  reporte_posting.txt  reporte_vacio.txt
