[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "controlcomparador"
version = "2.0.0"
description = "Comparador de archivos hípicos (San Isidro, Palermo, La Plata)"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=3.0",
    "xlrd>=2.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
controlcomparador = "controlcomparador.app:main"

[tool.setuptools.packages.find]
include = ["controlcomparador*"]
